--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^5.10.5",
     "@mantine/rte": "^5.10.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
@@ -28,6 +31,8 @@
     "react-router-dom": "^6.22.2",
     "sass": "^1.71.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "timeago.js": "^4.0.2",
     "zustand": "^5.0.6"
   },
