--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.2",
     "sass": "^1.71.1",
+    "simplex-noise": "^4.0.3",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
