--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.9.0"
+    "prisma": "^6.9.0",
+    "socket.io": "^4.8.3"
   },
   "engines": {
     "node": "18.x"
